styles/global.css
/* ... */
/*=============== BASE ===============*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body,
button,
input,
textarea {
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
}

body {
  background-color: var(--body-color);
  color: var(--text-color);
}

h1,
h2,
h3 {
  color: var(--title-color);
  font-weight: var(--font-semi-bold);
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

button {
  cursor: pointer;
  border: none;
  outline: none;
}

.card ul li {
  padding: 12px 0;
  border-bottom: 1px solid #e1e1e1;
}

.card ul li:last-child {
  border-bottom: none;
}

img {
  max-width: 100%;
  width: 50;
  height: auto;
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

#__next {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  flex: 1;
}

/*=============== REUSABLE CSS CLASSES ===============*/
.section {
  padding: 6rem 0 2rem;
}

.section__title {
  font-size: var(--h1-font-size);
  color: var(--title-color);
}

.section__subtitle {
  display: block;
  font-size: var(--small-font-size);
  margin-bottom: 4rem;
}

.section__title,
.section__subtitle {
  text-align: center;
}

/*=============== LAYOUT ===============*/
.container {
  max-width: 1400px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 27px;
}

.grid {
  display: grid;
  gap: 1.5rem;
}

.custom-scrollbar::-webkit-scrollbar {
  width: 14px; /* Width of the scrollbar */
  border-radius: 8px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: #e6e4e4;
  border-radius: 8px;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: #144e8b; /* Thumb color */
  border-radius: 8px; /* Round edges of the scrollbar thumb */
  border: 3px solid #144e8b; /* To create padding-like effect, make thumb narrower */
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: #5b8756; /* Change thumb color when hovered */
  border: 3px solid #5b8756; /* Keep the padding-like effect when hovered */
}

/*=============== BUTTONS ===============*/
.button {
  display: inline-block;
  background-color: var(--title-color);
  color: var(--container-color);
  padding: 1.25rem 2rem;
  border-radius: 1rem;
  font-weight: var(--font-medium);
}

.button:hover {
  background-color: var(--title-color-dark);
}

.button__icon {
  margin-left: var(--mb-0-5);
}

.button--flex {
  display: inline-flex;
  align-items: center;
}

/*=============== BREAKPOINTS ===============*/

/*=============== HEADER ===============*/
.logo {
  height: 6.5rem;
  width: auto;
}

.header {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-fixed);
  background-color: var(--body-color);
  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.08), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
  justify-content: space-between;
}

.nav {
  height: 5rem;
  display: flex;
  justify-content: space-evenly;
  width: 80%;
}

.nav__logo,
.nav__toggle {
  color: var(--title-color);
  font-weight: var(--font-medium);
}

.nav__logo {
  display: flex;
}
.nav__logo_2 {
  display: none;
  gap: 10px;
}
.nav__list {
  display: flex;
  column-gap: 2rem;
}

.nav__link {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 1.09rem;
  color: var(--title-color);
  font-weight: var(--font-medium);
  transition: 0.3s;
}

.nav__icon,
.nav__close,
.nav__toggle {
  display: none;
}
.nav__search-icon {
  display: block;
}
.search-title {
  display: none;
}
.nav-reverse {
  flex-direction: row-reverse;
  color: var(--title-color);
}

/* Active link  */

.active-link,
.nav__link:hover {
  color: var(--title-color-dark);
}
/* R logo  */
.r__logo {
  height: 6rem;
  width: 6rem;
  display: flex;
  align-items: center;
  justify-content: center;
}
/*=============== BANNER ===============*/
.banner {
  background-color: white;
  color: var(--title-color-dark);
}

.text-title-color {
  color: var(--title-color);
}

.text-title-color-dark {
  color: var(--title-color-dark);
}

.text-text-color {
  color: var(--text-color);
}

.btn-audience {
  background-color: var(--title-color-dark);
}

.btn-audience:hover {
  background-color: var(--title-color);
}

.btn-call {
  visibility: hidden;
}

.btn-contact {
  background-color: var(--title-color-dark);
  color: var(--container-color);
}

.btn-contact:hover {
  background-color: var(--title-color);
  color: var(--container-color);
}

.fade-in-right {
  animation: fade-in-right 1s ease-in-out;
}

@keyframes fade-in-right {
  0% {
    opacity: 0;
    transform: translateX(100%);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@media (max-width: 767px) {
  .banner-container {
    flex-direction: column;
    align-items: flex-start;
  }

  .text-container,
  .image-container {
    flex-basis: 100%;
    max-width: 100%;
  }

  .image-container {
    @apply order-first;
    width: 100%;
    height: auto;
  }
}

/*=============== PRODUCT ITEM ===============*/
.manufacturer-item {
  @apply flex flex-col items-center justify-center text-center;
}
.selected-manufactured {
  @apply bg-gray-200;
}
.card {
  @apply mt-3  rounded-lg border-gray-200 shadow-md mx-3;
}

.primary-button {
  background-color: var(--title-color);
  color: var(--container-color);
  @apply rounded py-2 px-4 shadow outline-none hover:bg-gray-400 active:bg-gray-500;
}
.primary-button2 {
  background-color: var(--title-color);
  color: var(--container-color);
}
.product-image {
  @apply object-cover rounded-t-lg;
}

.product-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 1rem;
}
.product-image {
  grid-column: span 2;
  margin-bottom: 3%;
}
.product-description {
  overflow-wrap: initial;
  text-overflow: ellipsis;
  overflow-y: hidden;
  height: 3em;
}
.myBtn:hover {
  background-color: var(--title-color);
}

.table-auto th,
.table-auto td {
  padding: 12px 15px;
}

.table-auto th {
  background-color: #f7f7f7; /* Color de fondo suave */
  color: #788b9b; /* Color de texto suave */
}
/* ... */

